fix: убрать z-index у иконки сохранения

--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -46,7 +46,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: #F9F9F9;
-  z-index: 2;
 }
 
 .movies-card__icon_type_notsaved {
